force-app/main/default/objects/ER_Contract__c/ER_Contract__c.object-meta.xml
<CustomObject>
    <label>Contract (Edenred)</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>