force-app/main/default/objects/ER_Contract__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>