force-app/main/default/objects/ER_Contract__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <label>Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrea Krakolinig</fullName>
            </value>
            <value>
                <fullName>Andrea Mader</fullName>
            </value>
            <value>
                <fullName>Andreas Hübner</fullName>
            </value>
            <value>
                <fullName>Barbara Kreuzberger</fullName>
            </value>
            <value>
                <fullName>Barbara Pillitsch</fullName>
            </value>
            <value>
                <fullName>bestehender Kunde</fullName>
            </value>
            <value>
                <fullName>Brandic Igor</fullName>
            </value>
            <value>
                <fullName>Celine Vernet</fullName>
            </value>
            <value>
                <fullName>Christiane Bichlbauer</fullName>
            </value>
            <value>
                <fullName>Christos Laki</fullName>
            </value>
            <value>
                <fullName>Cornelia Kuchar</fullName>
            </value>
            <value>
                <fullName>Ehemalige Mitarbeiter</fullName>
            </value>
            <value>
                <fullName>El Mohandes</fullName>
            </value>
            <value>
                <fullName>Gabor Nyul</fullName>
            </value>
            <value>
                <fullName>Ganthaler Sebastian</fullName>
            </value>
            <value>
                <fullName>Gerhard Leeb</fullName>
            </value>
            <value>
                <fullName>Gert Tuppinger</fullName>
            </value>
            <value>
                <fullName>Harald Pohl</fullName>
            </value>
            <value>
                <fullName>Jürgen Maier</fullName>
            </value>
            <value>
                <fullName>Karin Berger</fullName>
            </value>
            <value>
                <fullName>Katharina Lechner</fullName>
            </value>
            <value>
                <fullName>Kathrin Partl</fullName>
            </value>
            <value>
                <fullName>Margareta Dyga</fullName>
            </value>
            <value>
                <fullName>Martin Motovsky</fullName>
            </value>
            <value>
                <fullName>Martin Raudaschl</fullName>
            </value>
            <value>
                <fullName>Martin Rettenbacher</fullName>
            </value>
            <value>
                <fullName>Mergenthaler Rudolf</fullName>
            </value>
            <value>
                <fullName>Monika Hoegl</fullName>
            </value>
            <value>
                <fullName>Nadine Koppel</fullName>
            </value>
            <value>
                <fullName>Nadine Köppel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>