force-app/main/default/objects/ER_Contract__c/fields/AT_Closing_Fee__c.field-meta.xml
<CustomField>
    <fullName>AT_Closing_Fee__c</fullName>
    <defaultValue>IF($RecordType.Name=&quot;Affiliate Contract&quot;, 15, NULL)</defaultValue>
    <label>Closing Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>