force-app/main/default/objects/ER_Contract__c/fields/AT_Comments__c.field-meta.xml
<CustomField>
    <fullName>AT_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>