force-app/main/default/objects/ER_Contract__c/fields/AT_Commission_value_fixed_percentage__c.field-meta.xml
<CustomField>
    <fullName>AT_Commission_value_fixed_percentage__c</fullName>
    <label>Commission value (fixed percentage)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>