force-app/main/default/objects/ER_Contract__c/fields/AT_Decider_Contact__c.field-meta.xml
<CustomField>
    <fullName>AT_Decider_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decider Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The decider contact have to be from the same business account than the contract.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <infoMessage>The decider contact have to be from the same business account than the contract.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>