force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_for_the_first_order__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_for_the_first_order__c</fullName>
    <defaultValue>49</defaultValue>
    <label>Fixed amount for the first order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>