force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_for_the_other_orders__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_for_the_other_orders__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fixed amount for the other orders</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>