force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_per_card_expired_renewal__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_per_card_expired_renewal__c</fullName>
    <formula>AT_Fixed_amount_per_item_issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed amount per card expired renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>