force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_per_card_renewal__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_per_card_renewal__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Fixed amount per card renewal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>