force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_per_delivery__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_per_delivery__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Fixed amount per delivery</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>