force-app/main/default/objects/ER_Contract__c/fields/AT_Fixed_amount_per_item_issued__c.field-meta.xml
<CustomField>
    <fullName>AT_Fixed_amount_per_item_issued__c</fullName>
    <label>Fixed amount per item issued</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>