force-app/main/default/objects/ER_Contract__c/fields/AT_Indexed__c.field-meta.xml
<CustomField>
    <fullName>AT_Indexed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Index</label>
    <type>Checkbox</type>
</CustomField>