force-app/main/default/objects/ER_Contract__c/fields/AT_Is_Chain__c.field-meta.xml
<CustomField>
    <fullName>AT_Is_Chain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chain ?</label>
    <type>Checkbox</type>
</CustomField>