force-app/main/default/objects/ER_Contract__c/fields/AT_MasterContract__c.field-meta.xml
<CustomField>
    <fullName>AT_MasterContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Contract</label>
    <referenceTo>ER_Contract__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>