force-app/main/default/objects/ER_Contract__c/fields/AT_Opening_Fee__c.field-meta.xml
<CustomField>
    <fullName>AT_Opening_Fee__c</fullName>
    <label>Opening Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>