force-app/main/default/objects/ER_Contract__c/fields/AT_SEPA_Lastschriftmandat__c.field-meta.xml
<CustomField>
    <fullName>AT_SEPA_Lastschriftmandat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA Lastschriftmandat</label>
    <type>Checkbox</type>
</CustomField>