force-app/main/default/objects/ER_Contract__c/fields/AT_Yearly_Fee__c.field-meta.xml
<CustomField>
    <fullName>AT_Yearly_Fee__c</fullName>
    <defaultValue>IF($RecordType.Name=&quot;Affiliate Contract&quot;, 35, NULL)</defaultValue>
    <label>Annual Service Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>