force-app/main/default/objects/ER_Contract__c/fields/AT_Yearly_Multiple_Site_Fee__c.field-meta.xml
<CustomField>
    <fullName>AT_Yearly_Multiple_Site_Fee__c</fullName>
    <label>Annual Service Fee - Filliale Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>