force-app/main/default/objects/ER_Contract__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This bank account does not belong to the merchant.</errorMessage>
        <filterItems>
            <field>ER_Bank_Account__c.ER_Client_Merchant__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <infoMessage>Please enter a valid bank account for this contract.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ER_Bank_Account__c</referenceTo>
    <relationshipLabel>Contracts (Edenred)</relationshipLabel>
    <relationshipName>Contracts_Edenred</relationshipName>
    <type>Lookup</type>
</CustomField>