force-app/main/default/objects/ER_Contract__c/fields/CancellationPeriod__c.field-meta.xml
<CustomField>
    <fullName>CancellationPeriod__c</fullName>
    <label>Cancellation Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>1 month effective end of quarter</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>3 months effective end of month</fullName>
            </value>
            <value>
                <fullName>3 months effective end of contract</fullName>
            </value>
            <value>
                <fullName>6 months end of month</fullName>
            </value>
            <value>
                <fullName>6 months end of year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>