force-app/main/default/objects/ER_Contract__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prozentsatz</fullName>
            </value>
            <value>
                <fullName>Other Type</fullName>
            </value>
            <value>
                <fullName>Other Type II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>