force-app/main/default/objects/ER_Contract__c/fields/Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Commission_Value__c</fullName>
    <label>Commission Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>