force-app/main/default/objects/ER_Contract__c/fields/Contract_Back_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Back_Office_Number__c</fullName>
    <label>Contract Back Office Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>