force-app/main/default/objects/ER_Contract__c/fields/Contract_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Reason__c</fullName>
    <label>Contract Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration too high</fullName>
            </value>
            <value>
                <fullName>Annual Fee</fullName>
            </value>
            <value>
                <fullName>Bad experience</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Closed company</fullName>
            </value>
            <value>
                <fullName>Delayed payment</fullName>
            </value>
            <value>
                <fullName>Express payment too late</fullName>
            </value>
            <value>
                <fullName>Fee too high</fullName>
            </value>
            <value>
                <fullName>High difference</fullName>
            </value>
            <value>
                <fullName>Location too isolated</fullName>
            </value>
            <value>
                <fullName>Low volume</fullName>
            </value>
            <value>
                <fullName>Not enough demand or request</fullName>
            </value>
            <value>
                <fullName>Takeover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>