force-app/main/default/objects/ER_Contract__c/fields/Contract_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_end_date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>