force-app/main/default/objects/ER_Contract__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contract ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>