force-app/main/default/objects/ER_Contract__c/fields/Contract_Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reopen_Date__c</fullName>
    <label>Contract Reopen Date</label>
    <type>Date</type>
</CustomField>