force-app/main/default/objects/ER_Contract__c/fields/Contract_Validity_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Validity_Period__c</fullName>
    <label>Contract Validity Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>