force-app/main/default/objects/ER_Contract__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>ADDENDUM</fullName>
                <label>Invoice Addendum</label>
            </value>
            <value>
                <fullName>INVOICE_AND_ADDENDUM</fullName>
                <label>Invoice and Invoice Addendum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>