force-app/main/default/objects/ER_Contract__c/fields/ER_Accountant_Contact__c.field-meta.xml
<CustomField>
    <fullName>ER_Accountant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Accountant contact have to be from the same business account than the contract. (deactivated STE 2024-07-05)</description>
    <label>Accountant Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The Accountant contact have to be from the same business account than the contract.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Accountant Contact)</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>