force-app/main/default/objects/ER_Contract__c/fields/Evolution_Year_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Evolution_Year_to_Date__c</fullName>
    <label>Evolution Year to Date</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>