force-app/main/default/objects/ER_Contract__c/fields/Free_Transport__c.field-meta.xml
<CustomField>
    <fullName>Free_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Transport</label>
    <type>Checkbox</type>
</CustomField>