force-app/main/default/objects/ER_Contract__c/fields/InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFrequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>