force-app/main/default/objects/ER_Contract__c/fields/Last_Index__c.field-meta.xml
<CustomField>
    <fullName>Last_Index__c</fullName>
    <label>Last Index</label>
    <length>40</length>
    <type>Text</type>
</CustomField>