force-app/main/default/objects/ER_Contract__c/fields/Logo_Value__c.field-meta.xml
<CustomField>
    <fullName>Logo_Value__c</fullName>
    <label>Logo Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>