force-app/main/default/objects/ER_Contract__c/fields/Middle_fee__c.field-meta.xml
<CustomField>
    <fullName>Middle_fee__c</fullName>
    <description>Added by Christophe on Jan 10th 2018, following a request by email from Celine Vernet.</description>
    <label>Middle fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>