force-app/main/default/objects/ER_Contract__c/fields/Minimum_Commission__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Commission__c</fullName>
    <label>Minimum Commission</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>