force-app/main/default/objects/ER_Contract__c/fields/MinimumInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>MinimumInvoiceAmount__c</fullName>
    <label>Minimum Invoice Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>