force-app/main/default/objects/ER_Contract__c/fields/Order_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Order_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Allowed</label>
    <type>Checkbox</type>
</CustomField>