force-app/main/default/objects/ER_Contract__c/fields/Payment_Delay__c.field-meta.xml
<CustomField>
    <fullName>Payment_Delay__c</fullName>
    <label>Payment Delay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>14 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>Lastschrift</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Proforma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>