force-app/main/default/objects/ER_Contract__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Überweisung</fullName>
            </value>
            <value>
                <fullName>Other value I</fullName>
            </value>
            <value>
                <fullName>Other Value II</fullName>
            </value>
            <value>
                <fullName>Rechnung</fullName>
            </value>
            <value>
                <fullName>Lastschrift</fullName>
            </value>
            <value>
                <fullName>ASAT_PT4</fullName>
                <label>DIRECT_DEBIT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>