force-app/main/default/objects/ER_Contract__c/fields/Personalization__c.field-meta.xml
<CustomField>
    <fullName>Personalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalization</label>
    <type>Checkbox</type>
</CustomField>