force-app/main/default/objects/ER_Contract__c/fields/Personalization_Value__c.field-meta.xml
<CustomField>
    <fullName>Personalization_Value__c</fullName>
    <label>Personalization Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>