force-app/main/default/objects/ER_Contract__c/fields/ProductOnInvoice__c.field-meta.xml
<CustomField>
    <fullName>ProductOnInvoice__c</fullName>
    <label>Product on Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Plus</fullName>
            </value>
            <value>
                <fullName>ERAT_Meal</fullName>
                <label>Edenred Karten</label>
            </value>
            <value>
                <fullName>Ticket Restaurant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>