force-app/main/default/objects/ER_Contract__c/fields/SendInvoiceAutomatically__c.field-meta.xml
<CustomField>
    <fullName>SendInvoiceAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Automatically</label>
    <type>Checkbox</type>
</CustomField>