force-app/main/default/objects/ER_Contract__c/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <label>Service Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>