force-app/main/default/objects/ER_Contract__c/fields/Special_Fee__c.field-meta.xml
<CustomField>
    <fullName>Special_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Fee</label>
    <type>Checkbox</type>
</CustomField>