force-app/main/default/objects/ER_Contract__c/fields/Text_Printing_Cover__c.field-meta.xml
<CustomField>
    <fullName>Text_Printing_Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Changed following request made by Céline Vernet on Jan 11th 2018</description>
    <label>Text Printing</label>
    <type>Checkbox</type>
</CustomField>