force-app/main/default/objects/ER_Contract__c/fields/Text_Printing_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Text_Printing_Vouchers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field label changed following a request made by Céline Vernet on Jan 11th 2018</description>
    <label>Offline Order</label>
    <type>Checkbox</type>
</CustomField>