force-app/main/default/objects/ER_Contract__c/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>