force-app/main/default/objects/ER_Contract__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>