force-app/main/default/objects/ER_Contract__c/fields/User_Capacity__c.field-meta.xml
<CustomField>
    <fullName>User_Capacity__c</fullName>
    <label>User Capacity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>