force-app/main/default/objects/ER_Contract__c/fields/Value_of_Text_printing_Cover__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Text_printing_Cover__c</fullName>
    <description>Field label changed following a request made by Céline Vernet on Jan 11th 2018</description>
    <label>Value of Text printing</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>