force-app/main/default/objects/ER_Contract__c/fields/Value_of_text_printing_vouchers__c.field-meta.xml
<CustomField>
    <fullName>Value_of_text_printing_vouchers__c</fullName>
    <label>Value of Offline Order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>