force-app/main/default/objects/ER_Contract__c/fields/Year_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date__c</fullName>
    <label>Year to Date</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>