force-app/main/default/objects/ER_Contract__c/recordTypes/Affiliate_Contract_RT.recordType-meta.xml
<RecordType>
    <fullName>Affiliate_Contract_RT</fullName>
    <active>true</active>
    <label>Affiliate Contract</label>
</RecordType>