force-app/main/default/objects/ER_Contract__c/recordTypes/Client_Contract_RT.recordType-meta.xml
<RecordType>
    <fullName>Client_Contract_RT</fullName>
    <active>true</active>
    <label>Client Contract</label>
</RecordType>