force-app/main/default/objects/ER_Contract__c/validationRules/AT_Product_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>AT_Product_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name == &apos;Customer Service&apos;, 
    NOT(
        OR(
            ISPICKVAL(Product__c,&apos;Edenred Restaurant Card&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Restaurant Card&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Service Card&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Compliments Card&apos;),
            ISPICKVAL(Product__c,&apos;Edenred Lebensmittel Card&apos;),
            ISPICKVAL(Product__c,&apos;Edenred Geschenk Card&apos;),
            ISPICKVAL(Product__c,&apos;Edenred Restaurant&apos;),
            ISPICKVAL(Product__c,&apos;Edenred Lebensmittel&apos;),
            ISPICKVAL(Product__c,&apos;Edenred Geschenk&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Restaurant&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Service&apos;),
            ISPICKVAL(Product__c,&apos;Ticket Compliments&apos;)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>According to the validation rule, this value is not available for the profile customer service. Please contact your Salesforce Administrator</errorMessage>
</ValidationRule>